@startuml
FileCreator <|-- WebsiteGenerator
FileCreator --|> WebsiteGenerator

class WebsiteGenerator {
String siteName
String author
String generateJavaFolder
String generateCSSFolder
PromptUser()
PrintOutput(String folderPath)
}

class FileCreator
{
String folderPath
Generate(String siteName, String author, String genJava, String genCSS)
}

@enduml